unpackaged/main/default/objects/AcctSeed__Account_Payable__c/AcctSeed__Account_Payable__c.object-meta.xml
<CustomObject>
    <description>Used to document liabilities to outside vendor, contact, or employee.</description>
    <label>Payable</label>
    <nameField>
        <displayFormat>AP-{00000}</displayFormat>
        <label>Payable Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>