unpackaged/main/default/objects/AcctSeed__Account_Payable__c/fields/AcctSeed__Balance__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Balance__c</fullName>
    <formula>AcctSeed__Net_Amount__c - AcctSeed__Paid_Amount__c - AcctSeed__Credit_Memo_Applied_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Remainder of amount to pay via cash disbursement(s). This is Net Amount minus Paid Amount and Credit Memo Applied Amount</inlineHelpText>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>