unpackaged/main/default/objects/AcctSeed__Account_Payable__c/fields/AcctSeed__Closed_Accounting_Period__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Closed_Accounting_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The accounting period in which the account payable reached a zero balance. Used in generating AP aging history records. This field should never be manually updated.</inlineHelpText>
    <label>Closed Accounting  Period</label>
    <referenceTo>AcctSeed__Accounting_Period__c</referenceTo>
    <relationshipName>Accounts_Payable</relationshipName>
    <type>Lookup</type>
</CustomField>