unpackaged/main/default/objects/AcctSeed__Account_Payable__c/fields/AcctSeed__Credit_Memo_Applied_Amount__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Credit_Memo_Applied_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The amount applied to this account payable from credit memos.</inlineHelpText>
    <label>Credit Memo Applied Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>