unpackaged/main/default/objects/AcctSeed__Account_Payable__c/fields/AcctSeed__Ledger__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Ledger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denotes the associated ledger.</description>
    <label>Ledger</label>
    <referenceTo>AcctSeed__Ledger__c</referenceTo>
    <relationshipLabel>Payables</relationshipLabel>
    <relationshipName>Payables</relationshipName>
    <type>Lookup</type>
</CustomField>