unpackaged/main/default/objects/AcctSeed__Account_Payable__c/fields/AcctSeed__Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Paid_Amount__c</fullName>
    <inlineHelpText>Sum of amount paid on all associated cash disbursements</inlineHelpText>
    <label>Paid Amount</label>
    <summarizedField>AcctSeed__AP_Disbursement__c.AcctSeed__Paid_Amount__c</summarizedField>
    <summaryForeignKey>AcctSeed__AP_Disbursement__c.AcctSeed__Account_Payable__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>