unpackaged/main/default/objects/AcctSeed__Account_Payable__c/fields/AcctSeed__Payee_Reference__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payee_Reference__c</fullName>
    <inlineHelpText>Used for Vendor Invoice Number or Expense processing date if account payable is generated from expenses.</inlineHelpText>
    <label>Payee Reference</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>