unpackaged/main/default/objects/AcctSeed__Account_Payable__c/fields/AcctSeed__Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payment_Status__c</fullName>
    <inlineHelpText>This field is read only for the user. Unpaid means the Account Payable has not been selected for payment. Paid means a related Cash Disbursement record has been created for this Account Payable.</inlineHelpText>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unpaid</fullName>
                <default>true</default>
                <label>Unpaid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>