unpackaged/main/default/objects/AcctSeed__Account_Payable__c/fields/AcctSeed__Purchase_Tax2__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Purchase_Tax2__c</fullName>
    <description>Total Purchase Tax amount</description>
    <inlineHelpText>Total Purchase Tax amount</inlineHelpText>
    <label>Purchase Tax</label>
    <summarizedField>AcctSeed__Account_Payable_Line__c.AcctSeed__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>AcctSeed__Account_Payable_Line__c.AcctSeed__Tax_Line__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>AcctSeed__Account_Payable_Line__c.AcctSeed__Account_Payable__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>