unpackaged/main/default/objects/AcctSeed__Account_Payable__c/fields/AcctSeed__Reverse_Charge_Count__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Reverse_Charge_Count__c</fullName>
    <label>Reverse-Charge Count</label>
    <summaryFilterItems>
        <field>AcctSeed__Account_Payable_Line__c.AcctSeed__Reverse_Charge__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>AcctSeed__Account_Payable_Line__c.AcctSeed__Account_Payable__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>