unpackaged/main/default/objects/AcctSeed__Account_Payable__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>AcctSeed__Vendor__r.BillingStreet+", "+AcctSeed__Vendor__r.BillingCity +", "+AcctSeed__Vendor__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>