unpackaged/main/default/objects/AcctSeed__Account_Payable__c/fields/AP_Access_Circuit__c.field-meta.xml
<CustomField>
    <fullName>AP_Access_Circuit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the Carrier Access Circuit telephone bill account number.</inlineHelpText>
    <label>AP Access Circuit</label>
    <referenceTo>Access_Circuits__c</referenceTo>
    <relationshipName>Accounts_Payable</relationshipName>
    <type>Lookup</type>
</CustomField>