unpackaged/main/default/objects/AcctSeed__Account_Payable__c/fields/AP_Access_Circuit_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>AP_Access_Circuit_Account_Number__c</fullName>
    <label>AP Access Circuit Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>