unpackaged/main/default/objects/AcctSeed__Account_Payable__c/fields/AP_Account_Alias__c.field-meta.xml
<CustomField>
    <fullName>AP_Account_Alias__c</fullName>
    <formula>AcctSeed__Vendor__r.Account_Alias__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AP Account Alias</label>
    <type>Text</type>
</CustomField>