unpackaged/main/default/objects/AcctSeed__Account_Payable__c/fields/Cat_5_Discrepancy__c.field-meta.xml
<CustomField>
    <fullName>Cat_5_Discrepancy__c</fullName>
    <formula>AcctSeed__Total__c - Cat_5_Invoice_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cat-5 Discrepancy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>