unpackaged/main/default/objects/AcctSeed__Account_Payable__c/fields/Cat_5_Invoice_Total__c.field-meta.xml
<CustomField>
    <fullName>Cat_5_Invoice_Total__c</fullName>
    <description>Legacy field used for data migration</description>
    <label>Cat-5 Invoice Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>