unpackaged/main/default/objects/AcctSeed__Account_Payable__c/fields/Cat_5_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Cat_5_Order_ID__c</fullName>
    <label>Cat-5 Order ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>