unpackaged/main/default/objects/AcctSeed__Account_Payable__c/fields/Cat_5_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Cat_5_Paid_Date__c</fullName>
    <label>Cat-5 Paid Date</label>
    <type>Date</type>
</CustomField>