unpackaged/main/default/objects/AcctSeed__Account_Payable__c/fields/Cat_5_Paid_Total__c.field-meta.xml
<CustomField>
    <fullName>Cat_5_Paid_Total__c</fullName>
    <label>Cat-5 Paid Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>