unpackaged/main/default/objects/AcctSeed__Account_Payable__c/fields/Cat_5_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Cat_5_PO_Number__c</fullName>
    <label>Cat-5 PO Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>