unpackaged/main/default/objects/AcctSeed__Account_Payable__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Only populate if the entire bill is related to one client account.</inlineHelpText>
    <label>Client</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>notEqual</operation>
            <value>Vendor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Accounts_Payable</relationshipName>
    <type>Lookup</type>
</CustomField>