unpackaged/main/default/objects/AcctSeed__Account_Payable__c/fields/Client_Telephone_Bill__c.field-meta.xml
<CustomField>
    <fullName>Client_Telephone_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this if the A/P entry is a Client telephone bill. When selected, three AP lines will be created for MS-Access Services, Texas sales tax and other taxes and fees. A Client account must also be selected or the workflow will not trigger.</inlineHelpText>
    <label>Client Telephone Bill ?</label>
    <type>Checkbox</type>
</CustomField>