unpackaged/main/default/objects/AcctSeed__Account_Payable__c/fields/LegacyID__c.field-meta.xml
<CustomField>
    <fullName>LegacyID__c</fullName>
    <description>The ID Column for the Cat-5 table [ap_invoice_master]</description>
    <externalId>true</externalId>
    <label>LegacyID</label>
    <length>55</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>