unpackaged/main/default/objects/AcctSeed__Account_Payable__c/fields/MS_Lease_Payment__c.field-meta.xml
<CustomField>
    <fullName>MS_Lease_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MS Lease Payment ?</label>
    <type>Checkbox</type>
</CustomField>