unpackaged/main/default/objects/AcctSeed__Account_Payable__c/fields/Packing_Slip_ID__c.field-meta.xml
<CustomField>
    <fullName>Packing_Slip_ID__c</fullName>
    <label>Packing Slip ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>