unpackaged/main/default/objects/AcctSeed__Account_Payable__c/fields/PO_Amount__c.field-meta.xml
<CustomField>
    <fullName>PO_Amount__c</fullName>
    <formula>AcctSeedERP__Purchase_Order__r.AcctSeedERP__Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>