unpackaged/main/default/objects/AcctSeed__Account_Payable__c/fields/Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>Posted_Date__c</fullName>
    <label>Posted Date</label>
    <type>Date</type>
</CustomField>