unpackaged/main/default/objects/AcctSeed__Account_Payable__c/fields/Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>Vendor_ID__c</fullName>
    <formula>AcctSeed__Vendor__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor ID</label>
    <type>Text</type>
</CustomField>