unpackaged/main/default/objects/AcctSeed__Account_Payable__c/validationRules/AcctSeed__Accounting_Period_Open_New_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeed__Accounting_Period_Open_New_Record</fullName>
    <active>true</active>
    <description>The accounting period must be open to create a new record</description>
    <errorConditionFormula>ISNEW() &amp;&amp; !ISBLANK(AcctSeed__Accounting_Period__c) &amp;&amp; TEXT( AcctSeed__Accounting_Period__r.AcctSeed__Status__c) != "Open"</errorConditionFormula>
    <errorDisplayField>AcctSeed__Accounting_Period__c</errorDisplayField>
    <errorMessage>The accounting period must be open to create a record</errorMessage>
</ValidationRule>