unpackaged/main/default/objects/AcctSeed__Account_Payable__c/validationRules/AcctSeed__Net_Amount_Less_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeed__Net_Amount_Less_Than_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND( AcctSeed__Total__c &gt;= 0, AcctSeed__Net_Amount__c &lt; 0), true, false)</errorConditionFormula>
    <errorMessage>The discount amount cannot be greater than the total.</errorMessage>
</ValidationRule>