unpackaged/main/default/objects/AcctSeed__Account_Payable__c/validationRules/AcctSeed__Required_Accounting_Period.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeed__Required_Accounting_Period</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(AcctSeed__Accounting_Period__c)</errorConditionFormula>
    <errorDisplayField>AcctSeed__Accounting_Period__c</errorDisplayField>
    <errorMessage>You must enter a value</errorMessage>
</ValidationRule>