unpackaged/main/default/objects/AcctSeed__Account_Payable__c/validationRules/AcctSeed__Required_Due_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeed__Required_Due_Date</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(AcctSeed__Due_Date__c)</errorConditionFormula>
    <errorDisplayField>AcctSeed__Due_Date__c</errorDisplayField>
    <errorMessage>You must enter a value</errorMessage>
</ValidationRule>