unpackaged/main/default/objects/AcctSeed__Account_Payable__c/validationRules/AcctSeed__Required_Vendor_Contact_Or_Employee.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeed__Required_Vendor_Contact_Or_Employee</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(AcctSeed__Vendor__c) &amp;&amp; ISBLANK(AcctSeed__Contact__c) &amp;&amp; ISBLANK(AcctSeed__Employee__c)</errorConditionFormula>
    <errorMessage>You must specify a contact, vendor or employee as the payee</errorMessage>
</ValidationRule>