unpackaged/main/default/objects/AcctSeed__Account_Payable__c/listViews/AcctSeed__All.listView-meta.xml
<ListView>
    <fullName>AcctSeed__All</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Payee__c</columns>
    <columns>AcctSeed__Accounting_Period__c</columns>
    <columns>AcctSeed__Date__c</columns>
    <columns>AcctSeed__Due_Date__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <columns>AcctSeed__Payment_Status__c</columns>
    <columns>AcctSeed__Total__c</columns>
    <columns>AcctSeed__Balance__c</columns>
    <columns>AcctSeed__Payee_Reference__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Accounting_Year__c</field>
        <operation>equals</operation>
        <value>2021</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>