unpackaged/main/default/objects/AcctSeed__Account_Payable__c/listViews/AcctSeed__In_Process.listView-meta.xml
<ListView>
    <fullName>AcctSeed__In_Process</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Payee__c</columns>
    <columns>AcctSeed__Accounting_Period__c</columns>
    <columns>AcctSeed__Due_Date__c</columns>
    <columns>AcctSeed__Date__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <columns>AcctSeed__Payment_Status__c</columns>
    <columns>AcctSeed__Type__c</columns>
    <columns>AcctSeed__Total__c</columns>
    <columns>AcctSeed__Balance__c</columns>
    <columns>AcctSeed__Payee_Reference__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Status__c</field>
        <operation>notEqual</operation>
        <value>Posted</value>
    </filters>
    <label>Unposted</label>
</ListView>